--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="gameContainer">
+    <div class="gameContainer">
+        <div class="line"></div>
         <h1>Tic Tac Toe</h1>
         <div id="cellContainer">
-            <div cellIndex="0" class="cell" style="border-left:none; border-top:none;"></div>
-            <div cellIndex="1" class="cell" style="border-top:none;"></div>
-            <div cellIndex="2" class="cell" style="border-right:none; border-top:none;"></div>
-            <div cellIndex="3" class="cell" style="border-left:none;"></div>
+            
+            <div cellIndex="0" class="cell bl-0 bt-0"></div>
+            <div cellIndex="1" class="cell bt-0"></div>
+            <div cellIndex="2" class="cell bt-0 br-0"></div>
+            <div cellIndex="3" class="cell bl-0"></div>
             <div cellIndex="4" class="cell"></div>
-            <div cellIndex="5" class="cell" style="border-right:none;"></div>
-            <div cellIndex="6" class="cell" style="border-left:none; border-bottom:none;"></div>
-            <div cellIndex="7" class="cell" style="border-bottom:none;"></div>
-            <div cellIndex="8" class="cell" style="border-right:none; border-bottom:none;"></div>
+            <div cellIndex="5" class="cell br-0 "></div>
+            <div cellIndex="6" class="cell bl-0 bb-0"></div>
+            <div cellIndex="7" class="cell bb-0"></div>
+            <div cellIndex="8" class="cell bb-0 br-0"></div>
         </div>
         <h2 id="statusText"></h2>
         <button id="restartBtn">Restart</button>
+        <audio id="ting" src="ting.mp3"></audio>
     </div>
     <script src="tic_tac_toe.js"></script>
 </body>
