--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </div>
         <h2 id="statusText"></h2>
         <button id="restartBtn">Restart</button>
-        <audio id="ting" src="ting.mp3"></audio>
+        <audio id="pop" src="pop.mp3"></audio>
+        <audio id="draw" src="draw.mp3"></audio>
+        <audio id="win" src="win.mp3"></audio>
+        <audio id="click" src="click.mp3"></audio>
+
     </div>
     <script src="tic_tac_toe.js"></script>
 </body>
